<resources>
    <string name="app_name">FormComponents</string>
    <string name="colors">List of colors</string>
    <string name="color1">Green</string>
    <string name="color2">Red</string>
    <string name="color3">Blue</string>
    <string name="color4">yellow</string>
    <string name="display">Display</string>
    <string name="sample_text"></string>
    <string name="City_text"></string>
    <string name="displaytext1">The color selected are: </string>

    <string name="selectacity">Choose a city </string>
    <string name="city1">London</string>
    <string name="city2">Washington</string>
    <string name="city3">NewYork</string>
    <string name="city4">Amsterdam</string>
    <string name="displaytext2">The city selected are: </string>

    <string name="switchtext"></string>

</resources>
