<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.codesqills.formcomponents.FormComponent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/colors" />

    <CheckBox
        android:id="@+id/c1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getColors"
        android:text="@string/color1" />

    <CheckBox
        android:id="@+id/c2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getColors"
        android:text="@string/color2" />

    <CheckBox
        android:id="@+id/c3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getColors"
        android:text="@string/color3" />

    <CheckBox
        android:id="@+id/c4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getColors"
        android:text="@string/color4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayColors"
        android:text="@string/display"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/displaytext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displaytext1"/>
    <TextView
        android:id="@+id/displaytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectacity"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_gravity="center_horizontal"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r1"
                android:text="@string/city1"
                android:onClick="selectCity"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r2"
                android:text="@string/city2"
                android:onClick="selectCity"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r3"
                android:text="@string/city3"
                android:onClick="selectCity"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r4"
                android:text="@string/city4"
                android:onClick="selectCity"/>
        </RadioGroup>
        <TextView
            android:id="@+id/displaytext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/displaytext2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/city_text"
            android:text="@string/City_text"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>
